--- a/static/style.css
+++ b/static/style.css
@@ -29,3 +29,16 @@ body{
     text-align: center;
     font-size: 36px;
 }
+
+.form {
+    text-align: center;
+    font-size: 36px;  
+}
+
+.header{
+    text-align: center;  
+}
+
+.username {
+    text-align: center;
+}
